# FastAPI_contactbook

./: README.md  main.py  pyproject.toml
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
migrations/versions/: 788e8359660d_init.py  8f44a00c327e_init.py  a7f69f49feb2_init.py  a852dd78063f_init.py  b164fa6a72dd_init.py
postgres-data/base/13481/: 1247  1249  1259  2579  2606  2608  2610  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2703  2704  3455  pg_internal.init
postgres-data/global/: pg_control  pg_internal.init
postgres-data/pg_stat/: db_0.stat  db_13481.stat  global.stat
src/: schemas.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py
src/services/: auth.py  email.py
tests/: conftest.py  test.db  test_route_contacts.py  test_unit_repository_contacts.py  test_unit_repository_users.py
